--- a/index.html
+++ b/index.html
@@ -1,9 +1,169 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Rakesh Lakra</title>
+	<style>
+		h1 {
+		text-align: center;
+		padding: 100px 200px 1000px 300px;
+		}
+		body {
+			background-color: #9ACD32 ;
+
+
+		}
+
+		button {
+			padding: 5px;
+			margin: 5px;
+			margin-right: 10px;
+			margin-left: 10px;
+		}
+
+		abbr {
+			text-decoration: none;
+		}
+		header {
+			padding: 20px 30px 20px 30px;
+			background-color: #9370DB ;
+			color: #00f000;
+		}
+		footer {
+			text-decoration: none;
+			text-align: center;
+			background-color: #9370DB;
+		}
+		.fa-facebook {
+			padding: 10px;
+			text-decoration: none;
+			color: white;
+			background: blue;
+			border-radius: 50%;
+			font-size: 24px;
+		}
+		.fa-whatsapp {
+			padding: 10px;
+			text-decoration: none;
+			color: white;
+			background: green;
+			border-radius: 50%;
+			font-size: 24px;
+		}
+		.fa-phone-square {
+			padding: 10px;
+			text-decoration: none;
+			color: green;
+			background: white;
+			border-radius: 50%;
+			font-size: 24px;
+		}
+		.fa-linkedin {
+			padding: 10px;
+			text-decoration: none;
+			color: white;
+			background: #5555ff;
+			border-radius: 50%;
+			font-size: 24px;
+		}
+		.fa-home {
+			padding: 2px;
+			text-decoration: none;
+			color: blue;
+			font-size: 20px;
+		}
+	</style>
+
 </head>
+
+
 <body>
-<p> Welcome to my website!</p>
+
+<header>
+	<div>
+		<span><button><a href="#" class="fa fa-home" style="text-decoration: none;"> Home</a></button></span>
+		<span><button><a href="#About" style="text-decoration: none;font-size: 20px;color: blue;">About me</a></button></span>
+		<span><button><a href="#Timeline" style="text-decoration: none;font-size: 20px;color: blue;">Timeline</a></button></span>
+		<span><button><a href="#Contact" style="text-decoration: none;font-size: 20px;color: blue;">Contact</a></button></span>
+	</div>
+</header>
+
+<h1> Welcome to my website!</h1>
+
+<!--Overview-->
+<div id="div1">
+<h2><a name="About">About me</a></h2>
+	<img src="#" alt="my pic"><br>
+	<b>Name:</b> Rakesh Lakra <br>
+	<b>Present Address:</b> III- Allahabad <br>
+	<b>Degree:</b> (persurig)B.Tech in Information Technology <br>
+	<b>Phone: </b><a href="tel: +91-9155955844" style="text-decoration: none;">+91-9155955844</a>
+
+		<div >
+			<h3>My People</h3>
+				
+					<ul>
+					<li class="type2">
+
+						<b>Name: </b>Prabal Oraon<br>
+						<b>Relation: </b>Father<br>
+						<b>Present Address: </b>Daltonganj ; Barwadhi (office) <br>
+						<b>Work: </b>An State Gov. Servent<br>
+						<b>Phone: </b><a href="tel: +91-9608851731" style="text-decoration: none;">+91-9608851731</a><br>
+						</p>
+					</li>
+
+					<li class="type2"><p>
+
+							
+							<b>Name: </b>Prabha Kerketta<br>
+							<b>Relation: </b>Mother<br>
+							<b>Prsent Address: </b>Janho<br>
+							<b>Work: </b>Para-Teacher<br>
+							<b>Phone: </b><a href="tel: +91-9794711316" style="text-decoration: none;">+91-9794711316</a><br>
+						</p>
+					</li>
+
+					<li class="type2">
+						<b>Name: </b>Abhishek Kumar<br>
+						<b>Relation: </b>Elder brother<br>
+						<b>Present Address:</b>Ranchi<br>
+						<b>Degree: </b>(persuring) M.B.B.S (<a href="http://www.rimsranchi.org/">RIMMS</a>)  <br>
+						<b>Phone: </b><a href="tel: 7209739079" style="text-decoration: none;">+91-7209739079</a><br>
+					</li>
+					</ul>
+		</div>
+
+			<!--Timeline-->
+		<div>
+			<h3><a name="Timeline">Timeline</a></h3>
+				<ul>
+					<li>1996: Born in March 28 at <a href="http://www.ehausa.org/hospitals_navjivan.html" style="text-decoration: none;"> Nav Jivan Hospital</a> Tumagara Satbarwa Palamu Jharkhand.</li>
+					<li>2001-2003 : Children's Paradise School, Latehar   -   Nursery to LKG</li>
+					<li>2003-2008 : St. Xavier's Acadmey, Latehar    -  UKG to Standard 4</li>
+					<li>2008-2014 : Sacred Heart School, Chianki    -   Standard 5 to Standerd 10</li>
+					<li>2014-2016 : <a href="http://www.sxcran.org/" style="text-decoration: none;">St. Xavier's College, Ranchi </a>   -   Intermediate (XI to XII)</li>
+					<li>2016-prsent : <abbr title="Indian Institute of Information Technology, Allahabad" ><a href="https://www.iiita.ac.in/" style="text-decoration: none;">IIIT-Allahadab </a></abbr>   -    B.Tech in <abbr title="Information Technology" >IT</abbr></li>
+				</ul>
+		</div>
+</div>
+
+
+<footer>
+	<p>Version 1.0<p>
+	<h3><a name="Contact">Contact</a></h3>
+	<p><a href="mailto:shadowrakeshlakra@gmail.com" style="text-decoration: none;">E-mail: shadowrakeshlakra@gmail.com</a></p>
+	<p><a href="tel: +91-9155955844" style="text-decoration: none;">Mobile: +91-9155955844</a><br>
+	<br>
+	<a href="https://www.facebook.com/rakesh.lakra.583" class="fa fa-facebook">facebook</a>
+	&nbsp
+	<a href="tel: +91-9155955844" class="fa fa-phone-square">call</a>
+	&nbsp
+	<a href="#" class="fa fa-linkedin">linkedin</a>
+	&nbsp
+	<a href="href="whatsapp:contact=+91-9155955844@s.whatsapp.com&message="I'd like to chat with you"" class="fa fa-whatsapp">whatsapp</a>
+	</p>
+
+</footer>
 </body>
 </html>
