--- a/index.html
+++ b/index.html
@@ -150,20 +150,15 @@
 
 
 <footer>
-	<p>Version 1.0<p>
+	<p>Version 1.1<p>
 	<h3><a name="Contact">Contact</a></h3>
 	<p><a href="mailto:shadowrakeshlakra@gmail.com" style="text-decoration: none;">E-mail: shadowrakeshlakra@gmail.com</a></p>
 	<p><a href="tel: +91-9155955844" style="text-decoration: none;">Mobile: +91-9155955844</a><br>
 	<br>
-	<a href="https://www.facebook.com/rakesh.lakra.583" class="fa fa-facebook">facebook</a>
+	<a href="https://www.facebook.com/rakesh.lakra.583" class="fa fa-facebook"></a>
 	&nbsp
-	<a href="tel: +91-9155955844" class="fa fa-phone-square">call</a>
-	&nbsp
-	<a href="#" class="fa fa-linkedin">linkedin</a>
-	&nbsp
-	<a href="href="whatsapp:contact=+91-9155955844@s.whatsapp.com&message="I'd like to chat with you"" class="fa fa-whatsapp">whatsapp</a>
+		<a href="tel: +91-9155955844" class="fa fa-phone-square"></a>
 	</p>
-
 </footer>
 </body>
 </html>
