--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <link rel="icon" type="png/x-ico" href="favicon.ico">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Rakesh Lakra</title>
 	<style>
-		h1 {
+		#start {
 		text-align: center;
-		padding: 100px 200px 1000px 300px;
+		padding: 200px 0px 500px 0px;
 		}
 		body {
 			background-color: #9ACD32 ;
-
-
 		}
-
+		a {
+			color: black;
+		}
+		#div1 {
+			margin: 0px 0px 0px 30px;
+		}
 		button {
 			padding: 5px;
 			margin: 5px;
 			margin-right: 10px;
 			margin-left: 10px;
 		}
-
 		abbr {
 			text-decoration: none;
 		}
 		header {
 			padding: 20px 30px 20px 30px;
-			background-color: #9370DB ;
+			background-color: #af1fba ;
 			color: #00f000;
 		}
 		footer {
+			padding: 30px;
 			text-decoration: none;
 			text-align: center;
-			background-color: #9370DB;
+			background-color: #af1fba;
 		}
 		.fa-facebook {
 			padding: 10px;
@@ -42,14 +47,7 @@
 			border-radius: 50%;
 			font-size: 24px;
 		}
-		.fa-whatsapp {
-			padding: 10px;
-			text-decoration: none;
-			color: white;
-			background: green;
-			border-radius: 50%;
-			font-size: 24px;
-		}
+
 		.fa-phone-square {
 			padding: 10px;
 			text-decoration: none;
@@ -58,7 +56,7 @@
 			border-radius: 50%;
 			font-size: 24px;
 		}
-		.fa-linkedin {
+		.fa-github {
 			padding: 10px;
 			text-decoration: none;
 			color: white;
@@ -81,19 +79,19 @@
 
 <header>
 	<div>
-		<span><button><a href="#" class="fa fa-home" style="text-decoration: none;"> Home</a></button></span>
-		<span><button><a href="#About" style="text-decoration: none;font-size: 20px;color: blue;">About me</a></button></span>
-		<span><button><a href="#Timeline" style="text-decoration: none;font-size: 20px;color: blue;">Timeline</a></button></span>
-		<span><button><a href="#Contact" style="text-decoration: none;font-size: 20px;color: blue;">Contact</a></button></span>
+		<span><img src="LOGO.png" alt="R"></span>
+		<span><button type="button" class="btn"><a href="#About" style="text-decoration: none;font-size: 20px;color: blue;">About me</a></button></span>
+		<span><button type="button" class="btn"><a href="#Timeline" style="text-decoration: none;font-size: 20px;color: blue;">Timeline</a></button></span>
+		<span><button type="button" class="btn"><a href="#Contact" style="text-decoration: none;font-size: 20px;color: blue;">Contact</a></button></span>
 	</div>
 </header>
 
-<h1> Welcome to my website!</h1>
+<h1 id="start"> Welcome to my website!</h1>
 
 <!--Overview-->
 <div id="div1">
 <h2><a name="About">About me</a></h2>
-	<img src="#" alt="my pic"><br>
+	<img src="#" alt=""><br>
 	<b>Name:</b> Rakesh Lakra <br>
 	<b>Present Address:</b> III- Allahabad <br>
 	<b>Degree:</b> (persurig)B.Tech in Information Technology <br>
@@ -128,7 +126,7 @@
 						<b>Name: </b>Abhishek Kumar<br>
 						<b>Relation: </b>Elder brother<br>
 						<b>Present Address:</b>Ranchi<br>
-						<b>Degree: </b>(persuring) M.B.B.S (<a href="http://www.rimsranchi.org/">RIMMS</a>)  <br>
+						<b>Degree: </b>(persuring)<abbr title="Bachelor of Medicine and Bachelor of Surgery"> M.B.B.S </abbr>(<a href="http://www.rimsranchi.org/" target= "_blank"><abbr title="Rajendra Institute of Medical Sciences, Ranchi">RIMS</abbr></a>)  <br>
 						<b>Phone: </b><a href="tel: 7209739079" style="text-decoration: none;">+91-7209739079</a><br>
 					</li>
 					</ul>
@@ -138,12 +136,12 @@
 		<div>
 			<h3><a name="Timeline">Timeline</a></h3>
 				<ul>
-					<li>1996: Born in March 28 at <a href="http://www.ehausa.org/hospitals_navjivan.html" style="text-decoration: none;"> Nav Jivan Hospital</a> Tumagara Satbarwa Palamu Jharkhand.</li>
+					<li>1996: Born in March 28 at <a href="http://www.ehausa.org/hospitals_navjivan.html" style="text-decoration: none;" target= "_blank"> Nav Jivan Hospital</a> Tumagara Satbarwa Palamu Jharkhand.</li>
 					<li>2001-2003 : Children's Paradise School, Latehar   -   Nursery to LKG</li>
 					<li>2003-2008 : St. Xavier's Acadmey, Latehar    -  UKG to Standard 4</li>
 					<li>2008-2014 : Sacred Heart School, Chianki    -   Standard 5 to Standerd 10</li>
-					<li>2014-2016 : <a href="http://www.sxcran.org/" style="text-decoration: none;">St. Xavier's College, Ranchi </a>   -   Intermediate (XI to XII)</li>
-					<li>2016-prsent : <abbr title="Indian Institute of Information Technology, Allahabad" ><a href="https://www.iiita.ac.in/" style="text-decoration: none;">IIIT-Allahadab </a></abbr>   -    B.Tech in <abbr title="Information Technology" >IT</abbr></li>
+					<li>2014-2016 : <a href="http://www.sxcran.org/" style="text-decoration: none;" target= "_blank">St. Xavier's College, Ranchi </a>   -   Intermediate (XI to XII)</li>
+					<li>2016-prsent : <abbr title="Indian Institute of Information Technology, Allahabad" ><a href="https://www.iiita.ac.in/" style="text-decoration: none;" target= "_blank">IIIT-Allahadab </a></abbr>   -    B.Tech in <abbr title="Information Technology" >IT</abbr></li>
 				</ul>
 		</div>
 </div>
@@ -152,12 +150,13 @@
 <footer>
 	<p>Version 1.1<p>
 	<h3><a name="Contact">Contact</a></h3>
-	<p><a href="mailto:shadowrakeshlakra@gmail.com" style="text-decoration: none;">E-mail: shadowrakeshlakra@gmail.com</a></p>
-	<p><a href="tel: +91-9155955844" style="text-decoration: none;">Mobile: +91-9155955844</a><br>
+	<p><b><a href="mailto:shadowrakeshlakra@gmail.com" style="text-decoration: none;" target= "_blank">E-mail: shadowrakeshlakra@gmail.com</a></p>
+	<p><a href="tel: +91-9155955844" style="text-decoration: none;">Mobile: +91-9155955844</a><b><br>
 	<br>
 	<a href="https://www.facebook.com/rakesh.lakra.583" class="fa fa-facebook"></a>
 	&nbsp
-		<a href="tel: +91-9155955844" class="fa fa-phone-square"></a>
+		<a href="tel: +91-9155955844" class="fa fa-phone-square"></a><br>
+		<a href="https://github.com/RakeshLakra" class="fa fa-github" style="text-decoration: none;"></a>
 	</p>
 </footer>
 </body>
