--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	 <link rel="icon" type="png/x-ico" href="https://rakeshlakra.github.io/favicon.ico">
+	<!-- meta data -->
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="My Portfolio Page.">
+    <meta name="author" content="Rakesh Larka">
+	 
+	<link rel="icon" type="png/x-ico" href="https://rakeshlakra.github.io/favicon.ico">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Rakesh Lakra</title>
